[package]
name = "marduk"
version = "0.1.0"
authors = ["Ewan Valentine <ewan.valentine89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_logs="0.44.0"
rusoto_core="0.44.0"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.56"
